add introduction updata about

--- a/culture.html
+++ b/culture.html
@@ -6,7 +6,7 @@
   <title></title>
   <meta charset="UTF-8">
   <title title="品驾酒">品驾酒-全力打造古井镇第二大白酒品牌</title>
-  <link rel="shortcut icon" type="text/css" href="./images/log.jpg">
+  <link rel="shortcut icon" type="text/css" href="./images/log.png">
   <link rel="stylesheet" href="./bs/css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="./bs/css/public.css">
   <script src='./bs/js/jquery.js'></script>
@@ -20,11 +20,17 @@
         <li class="col-md-2"><a href="./index.html">首页</a></li>
         <li class="col-md-2"><a href="./products.html">产品中心</a></li>
         <li class="col-md-2"><a href="./culture.html">白酒文化</a></li>
-        <li class="col-md-2"><a href="./about.html">关于我们</a></li>
+        <li class="col-md-2"><a href="./introduction.html">公司简介</a></li>
+        <li class="col-md-2"><a href="./about.html">联系我们</a></li>
+        <li class="col-md-2"><a href="./join.html">招商加盟</a></li>
       </ul>
     </div>
   </div>
   <div class="container">
+    <ol class="breadcrumb">
+      <li><a href="./index.html">首页</a></li>
+      <li><a href="./about.html">产品中心</a></li>
+    </ol>
     <div class="title1">
       <div class="title-header">
         <div class="row">
