--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="keywords" content="品驾酒,古井镇白酒,白酒,窖藏老酒,珍藏原浆" />
   <title title="品驾酒">品驾酒-全力打造古井镇第二大白酒品牌</title>
-  <link rel="shortcut icon" type="text/css" href="./images/log.jpg">
+  <link rel="shortcut icon" type="text/css" href="./images/log.png">
   <link rel="stylesheet" href="./bs/css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="./bs/css/main.css">
   <link rel="stylesheet" type="text/css" href="./bs/css/public.css">
@@ -23,19 +23,23 @@
         <li class="col-md-2"><a href="./index.html">首页</a></li>
         <li class="col-md-2"><a href="./products.html">产品中心</a></li>
         <li class="col-md-2"><a href="./culture.html">白酒文化</a></li>
-        <li class="col-md-2"><a href="./about.html">关于我们</a></li>
+        <li class="col-md-2"><a href="./introduction.html">公司简介</a></li>
+        <li class="col-md-2"><a href="./about.html">联系我们</a></li>
+        <li class="col-md-2"><a href="./join.html">招商加盟</a></li>
       </ul>
     </div>
   </div>
   <div class="Carousel">
     <div class="Carousel-img">
-      <img src="./images/banner01.jpg" height="444px" width='100%'>
-      <img src="./images/banner02.jpg" height="444px" width='100%'>
+      <img src="./images/banner01.jpg" height=400 width=100%>
+      <img src="./images/banner02.jpg" height=400 width=100%>
+      <img src="./images/banner03.jpg" height=400 width=100%>
     </div>
     <div class="Pointer-left"><img src="./images/prev.png" height=50></div>
     <div class="Pointer-right"><img src="./images/next.png" height=50></div>
     <div class="Carousel-dot">
       <ul>
+        <li></li>
         <li></li>
         <li></li>
       </ul>
@@ -107,7 +111,7 @@
         <div class="row">
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/title-1.jpg">
+              <img src="./images/title-7.jpg">
               <div class="caption">
                 <h4>珍藏原浆</h4>
                 <a href="#">品驾牌-珍藏原浆十六年</a>
@@ -117,7 +121,7 @@
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/title-2.jpg">
+              <img src="./images/title-6.jpg">
               <div class="caption">
                 <h4>品驾贡酒</h4>
                 <a href="#">品驾牌-品驾贡酒十年</a>
@@ -127,7 +131,7 @@
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/title-3.jpg">
+              <img src="./images/title-9.jpg">
               <div class="caption">
                 <h4>窖藏老酒</h4>
                 <a href="#">品驾牌-窖藏十年老酒</a>
