--- a/products.html
+++ b/products.html
@@ -6,7 +6,7 @@
   <title></title>
   <meta charset="UTF-8">
   <title title="品驾酒">品驾酒-全力打造古井镇第二大白酒品牌</title>
-  <link rel="shortcut icon" type="text/css" href="./images/log.jpg">
+  <link rel="shortcut icon" type="text/css" href="./images/log.png">
   <link rel="stylesheet" href="./bs/css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="./bs/css/public.css">
   <script src='./bs/js/jquery.js'></script>
@@ -31,7 +31,9 @@
         <li class="col-md-2"><a href="./index.html">首页</a></li>
         <li class="col-md-2"><a href="./products.html">产品中心</a></li>
         <li class="col-md-2"><a href="./culture.html">白酒文化</a></li>
-        <li class="col-md-2"><a href="./about.html">关于我们</a></li>
+        <li class="col-md-2"><a href="./introduction.html">公司简介</a></li>
+        <li class="col-md-2"><a href="./about.html">联系我们</a></li>
+        <li class="col-md-2"><a href="./join.html">招商加盟</a></li>
       </ul>
     </div>
   </div>
@@ -90,7 +92,7 @@
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/title-1.jpg">
+              <img src="./images/title-7.jpg">
               <div class="caption">
                 <h4>珍藏原浆</h4>
                 <a href="#">品驾牌-珍藏原浆十六年</a>
@@ -100,7 +102,7 @@
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/title-2.jpg">
+              <img src="./images/title-6.jpg">
               <div class="caption">
                 <h4>品驾贡酒</h4>
                 <a href="#">品驾牌-品驾贡酒十年</a>
@@ -110,7 +112,7 @@
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/title-3.jpg">
+              <img src="./images/title-9.jpg">
               <div class="caption">
                 <h4>窖藏老酒</h4>
                 <a href="#">品驾牌-窖藏十年老酒</a>
