--- a/join.html
+++ b/join.html
@@ -12,31 +12,14 @@
   <script src='./bs/js/jquery.js'></script>
   <script src='./bs/js/bootstrap.js'></script>
   <style type="text/css">
-    .about_center{
-      margin: 40px 0;
+    .title1 {
+      width: 100%;
+      margin-top: 10px;
+      margin-bottom: 10px;
+      margin-bottom: 40px;
     }
-    .col-md-6{
-      text-align:center;
-    }
-    .about_main{
-      margin: 40px 0;
-      overflow: hidden;
-      background: #fffff2;
-    }
-    .about_text{
-      list-style-type: none;
-    }
-    .about_text li{
-      text-align: left;
-      line-height: 40px;
-    }
-    .about_weixin{
-      text-align:center;
-      margin: 20px 0;
-    }
-    .about_weixin img{
-      width: 400px;
-      height: 500px;
+    .col-md-3{
+      margin: 10px 0;
     }
   </style>
 </head>
@@ -55,32 +38,7 @@
     </div>
   </div>
   <div class="container">
-    <ol class="breadcrumb">
-      <li><a href="./index.html">首页</a></li>
-      <li><a href="./about.html">联系我们</a></li>
-    </ol>
-    <div class="about_center">
-      <h3 class="page-header text-center">联系我们</h3>
-      <div class="about_main">
-        <div class="col-md-6"><img src="./images/20140620180620732073.jpg" alt=""></div>
-        <div class="col-md-6">
-          <ul class="about_text">
-              <li><h4 style = 'font-weight: bold'>亳州市品驾酒有限责任公司</h4></li>
-              <li>厂址：安徽省亳州市谯城区古井镇三曹路9号</li>
-              <li>法定代表人：孙管</li>
-              <li>手机：18815689120</li>
-              <li>业务部：顾连生</li>
-              <li>手机：18815689115</li>
-              <li>邮编：236800</li>
-              <li>网址：www.pinjiajiu.com</li>
-          </ul>
-        </div>
-      </div>
-      <div class="about_weixin">
-        <h3 style = 'margin: 40px; font-weight:bold; color: #555'>品驾酒微信公共号，扫一扫关注：</h3>
-        <img src="./images/weixin.jpg" alt="微信公共号">
-      </div>
-    </div>
+
   </div>
   <div class="footer">
       <div class="footer-bottom">
@@ -93,3 +51,4 @@
   </div>
 </body>
 </html>
+
