--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" type="text/css" href="./bs/css/public.css">
   <script src='./bs/js/jquery.js'></script>
   <script src='./bs/js/bootstrap.js'></script>
+  <script src='./bs/js/public.js'></script>
   <style type="text/css">
     .about_center{
       margin: 40px 0;
@@ -65,7 +66,7 @@
         <div class="col-md-6"><img src="./images/20140620180620732073.jpg" alt=""></div>
         <div class="col-md-6">
           <ul class="about_text">
-              <li><h4 style = 'font-weight: bold'>亳州市品驾酒有限责任公司</h4></li>
+              <li><h4 style = 'font-weight: bold'>亳州市品驾酒业有限公司</h4></li>
               <li>厂址：安徽省亳州市谯城区古井镇三曹路9号</li>
               <li>法定代表人：孙管</li>
               <li>手机：18815689120</li>
@@ -82,6 +83,8 @@
       </div>
     </div>
   </div>
+  <div id="moquu_wxin" class="moquu_wxin"><a href="./about.html"><div class="moquu_wxinh"></div></a></div>
+  <div id="moquu_wshare" class="moquu_wshare"><a href="javascript:void(0)"><div class="moquu_wshareh"></div></a></div>
   <div class="footer">
       <div class="footer-bottom">
         <div class="col-md-4 col-md-offset-4">
