--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <script src='./bs/js/jquery.js'></script>
   <script src='./bs/js/bootstrap.js'></script>
   <script src='./bs/js/Carousel.js'></script>
+  <script src='./bs/js/public.js'></script>
 </head>
-
 <body>
   <div class="Navbar">
     <div class="container">
@@ -31,9 +31,9 @@
   </div>
   <div class="Carousel">
     <div class="Carousel-img">
-      <img src="./images/banner01.jpg" height=400 width=100%>
-      <img src="./images/banner02.jpg" height=400 width=100%>
-      <img src="./images/banner03.jpg" height=400 width=100%>
+      <img src="./images/banner01.jpg" height=400 width=1920>
+      <img src="./images/banner02.jpg" height=400 width=1920>
+      <img src="./images/banner03.jpg" height=400 width=1920>
     </div>
     <div class="Pointer-left"><img src="./images/prev.png" height=50></div>
     <div class="Pointer-right"><img src="./images/next.png" height=50></div>
@@ -62,7 +62,7 @@
               <div class="caption">
                 <h4>珍藏原浆</h4>
                 <a href="#">品驾牌-珍藏原浆十六年</a>
-                </span><span class="content-price">￥398.0</span></p>
+                <span class="content-price">￥398.0</span>
               </div>
             </div>
           </div>
@@ -72,7 +72,7 @@
               <div class="caption">
                 <h4>品驾贡酒</h4>
                 <a href="#">品驾牌-品驾贡酒十年</a>
-                <span class="content-price">￥399.0</span></p>
+                <span class="content-price">￥399.0</span>
               </div>
             </div>
           </div>
@@ -82,7 +82,7 @@
               <div class="caption">
                 <h4>窖藏老酒</h4>
                 <a href="#">品驾牌-窖藏十年老酒</a>
-                <span class="content-price">￥880.0</span></p>
+                <span class="content-price">￥880.0</span>
               </div>
             </div>
           </div>
@@ -92,7 +92,7 @@
               <div class="caption">
                 <h4>内部特供</h4>
                 <a href="#">品驾牌-内部接待用酒</a>
-                <span class="content-price">￥188.0</span></p>
+                <span class="content-price">￥188.0</span>
               </div>
             </div>
           </div>
@@ -115,7 +115,7 @@
               <div class="caption">
                 <h4>珍藏原浆</h4>
                 <a href="#">品驾牌-珍藏原浆十六年</a>
-                </span><span class="content-price">￥398.0</span></p>
+                <span class="content-price">￥398.0</span>
               </div>
             </div>
           </div>
@@ -125,7 +125,7 @@
               <div class="caption">
                 <h4>品驾贡酒</h4>
                 <a href="#">品驾牌-品驾贡酒十年</a>
-                <span class="content-price">￥399.0</span></p>
+                <span class="content-price">￥399.0</span>
               </div>
             </div>
           </div>
@@ -135,17 +135,17 @@
               <div class="caption">
                 <h4>窖藏老酒</h4>
                 <a href="#">品驾牌-窖藏十年老酒</a>
-                <span class="content-price">￥880.0</span></p>
+                <span class="content-price">￥880.0</span>
               </div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/title-4.jpg">
+              <img src="./images/title-5.jpg">
               <div class="caption">
                 <h4>内部特供</h4>
                 <a href="#">品驾牌-内部接待用酒</a>
-                <span class="content-price">￥188.0</span></p>
+                <span class="content-price">￥188.0</span>
               </div>
             </div>
           </div>
@@ -197,7 +197,7 @@
             <div class="thumbnail">
               <div class="teacher-header">
                 <div class="teacher-img">
-                  <img src="./images/teacher1.jpg" height='100%'>
+                  <img src="./images/teacher1.jpg" height='100%' width="100%">
                 </div>
                 <div class="teacher-content">
                   <h4 class="text-center">孙管</h4>
@@ -205,7 +205,7 @@
                 </div>
               </div>
               <div class="caption">
-                <span style="color: #444">专注白酒十年，公司销售</span>
+                <span style="color: #444">专注白酒十年，公司董事长</span>
               </div>
             </div>
           </div>
@@ -232,7 +232,7 @@
                   <img src="./images/teacher3.jpg" height='100%'>
                 </div>
                 <div class="teacher-content">
-                  <h4 class="text-center">刘新高</h4>
+                  <h4 class="text-center">孙正业</h4>
                   <p class="text-center">董事</p>
                 </div>
               </div>
@@ -261,6 +261,8 @@
       </div>
     </div>
   </div>
+  <div id="moquu_wxin" class="moquu_wxin"><a href="./about.html"><div class="moquu_wxinh"></div></a></div>
+  <div id="moquu_wshare" class="moquu_wshare"><a href="javascript:void(0)"><div class="moquu_wshareh"></div></a></div>
   <div class="footer">
     <div class="footer-bottom">
       <div class="col-md-4 col-md-offset-4">
@@ -274,5 +276,4 @@
 <script type="text/javascript">
 $('.thumbnail').css({ 'position': 'relative' });
 </script>
-
 </html>
