--- a/introduction.html
+++ b/introduction.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" type="text/css" href="./bs/css/public.css">
   <script src='./bs/js/jquery.js'></script>
   <script src='./bs/js/bootstrap.js'></script>
+  <script src='./bs/js/public.js'></script>
   <style type="text/css">
     pre{
       background:#fff;
@@ -147,6 +148,8 @@
       </div>
     </div>
   </div>
+  <div id="moquu_wxin" class="moquu_wxin"><a href="./about.html"><div class="moquu_wxinh"></div></a></div>
+  <div id="moquu_wshare" class="moquu_wshare"><a href="javascript:void(0)"><div class="moquu_wshareh"></div></a></div>
   <div class="footer">
       <div class="footer-bottom">
         <div class="col-md-4 col-md-offset-4">
