--- a/products.html
+++ b/products.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" type="text/css" href="./bs/css/public.css">
   <script src='./bs/js/jquery.js'></script>
   <script src='./bs/js/bootstrap.js'></script>
+  <script src='./bs/js/public.js'></script>
   <style type="text/css">
     .title1 {
       width: 100%;
@@ -56,7 +57,7 @@
               <div class="caption">
                 <h4>珍藏原浆</h4>
                 <a href="#">品驾牌-珍藏原浆十六年</a>
-                </span><span class="content-price">￥398.0</span></p>
+                <span class="content-price">￥398.0</span>
               </div>
             </div>
           </div>
@@ -66,7 +67,7 @@
               <div class="caption">
                 <h4>品驾贡酒</h4>
                 <a href="#">品驾牌-品驾贡酒十年</a>
-                <span class="content-price">￥399.0</span></p>
+                <span class="content-price">￥399.0</span>
               </div>
             </div>
           </div>
@@ -76,7 +77,7 @@
               <div class="caption">
                 <h4>窖藏老酒</h4>
                 <a href="#">品驾牌-窖藏十年老酒</a>
-                <span class="content-price">￥880.0</span></p>
+                <span class="content-price">￥880.0</span>
               </div>
             </div>
           </div>
@@ -86,7 +87,7 @@
               <div class="caption">
                 <h4>内部特供</h4>
                 <a href="#">品驾牌-内部接待用酒</a>
-                <span class="content-price">￥188.0</span></p>
+                <span class="content-price">￥188.0</span>
               </div>
             </div>
           </div>
@@ -96,7 +97,7 @@
               <div class="caption">
                 <h4>珍藏原浆</h4>
                 <a href="#">品驾牌-珍藏原浆十六年</a>
-                </span><span class="content-price">￥398.0</span></p>
+                <span class="content-price">￥398.0</span>
               </div>
             </div>
           </div>
@@ -106,7 +107,7 @@
               <div class="caption">
                 <h4>品驾贡酒</h4>
                 <a href="#">品驾牌-品驾贡酒十年</a>
-                <span class="content-price">￥399.0</span></p>
+                <span class="content-price">￥399.0</span>
               </div>
             </div>
           </div>
@@ -116,17 +117,17 @@
               <div class="caption">
                 <h4>窖藏老酒</h4>
                 <a href="#">品驾牌-窖藏十年老酒</a>
-                <span class="content-price">￥880.0</span></p>
+                <span class="content-price">￥880.0</span>
               </div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/title-4.jpg">
+              <img src="./images/title-5.jpg">
               <div class="caption">
                 <h4>内部特供</h4>
                 <a href="#">品驾牌-内部接待用酒</a>
-                <span class="content-price">￥188.0</span></p>
+                <span class="content-price">￥188.0</span>
               </div>
             </div>
           </div>
@@ -134,6 +135,8 @@
       </div>
     </div>
   </div>
+  <div id="moquu_wxin" class="moquu_wxin"><a href="./about.html"><div class="moquu_wxinh"></div></a></div>
+  <div id="moquu_wshare" class="moquu_wshare"><a href="javascript:void(0)"><div class="moquu_wshareh"></div></a></div>
   <div class="footer">
       <div class="footer-bottom">
         <div class="col-md-4 col-md-offset-4">
