--- a/culture.html
+++ b/culture.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +13,75 @@
   <script src='./bs/js/jquery.js'></script>
   <script src='./bs/js/bootstrap.js'></script>
   <script src='./bs/js/public.js'></script>
+  <style type="text/css">
+  pre {
+    background: #fff;
+    line-height: 30px;
+    font-size: 14px;
+    border: none;
+    font-family: 微软雅黑;
+  }
+
+  .culture_center {
+    overflow: hidden;
+    margin-top: 40px;
+    margin-bottom: 40px;
+  }
+
+  .culture_center .col-md-8 {
+    line-height: 30px;
+  }
+
+  .culture_center ul {
+    padding: 20px 30px;
+    list-style-type: none;
+  }
+
+  .ul1 li:nth-child(2n) {
+    text-indent: 1cm;
+  }
+
+  .ul2 li:nth-child(2n) {
+    background: #9c061b;
+    line-height: 40px;
+    font-weight: bold;
+    font-size: 16px;
+    padding-left: 20px;
+    color: #fafafa;
+  }
+
+  .ul1 img,
+  .ul3 img {
+    width: 100%;
+  }
+
+  .culture_center img {
+    margin: 25px 0;
+  }
+
+  .news {
+    background: #fffff1;
+    padding: 0;
+  }
+
+  .news h4 {
+    color: #8f0002;
+  }
+
+  .news p {
+    text-indent: 30px;
+    color: #666;
+  }
+
+  .news-title li {
+    border-bottom: 1px #ccc solid;
+    line-height: 30px;
+    margin: 15px 0;
+    padding: 15px;
+  }
+  </style>
 </head>
+
 <body>
   <div class="Navbar">
     <div class="container">
@@ -30,70 +99,134 @@
   <div class="container">
     <ol class="breadcrumb">
       <li><a href="./index.html">首页</a></li>
-      <li><a href="./about.html">产品中心</a></li>
+      <li><a href="./culture.html">白酒文化</a></li>
     </ol>
-    <div class="title1">
-      <div class="title-header">
-        <div class="row">
-          <h3 class="col-md-2">热门产品</h3>
-        </div>
-      </div>
-      <div class="title-content">
-        <div class="row">
-          <div class="col-md-3">
-            <div class="thumbnail">
-              <img src="./images/title-1.jpg">
-              <div class="caption">
-                <h4>珍藏原浆</h4>
-                <a href="#">品驾牌-珍藏原浆十六年</a>
-                </span><span class="content-price">￥398.0</span></p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="thumbnail">
-              <img src="./images/title-2.jpg">
-              <div class="caption">
-                <h4>品驾贡酒</h4>
-                <a href="#">品驾牌-品驾贡酒十年</a>
-                <span class="content-price">￥399.0</span></p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="thumbnail">
-              <img src="./images/title-3.jpg">
-              <div class="caption">
-                <h4>窖藏老酒</h4>
-                <a href="#">品驾牌-窖藏十年老酒</a>
-                <span class="content-price">￥880.0</span></p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="thumbnail">
-              <img src="./images/title-4.jpg">
-              <div class="caption">
-                <h4>内部特供</h4>
-                <a href="#">品驾牌-内部接待用酒</a>
-                <span class="content-price">￥188.0</span></p>
-              </div>
-            </div>
-          </div>
-        </div>
+    <div class="culture_center">
+      <div class="col-md-9 news col-md-offset-1">
+        <ul class="news-title">
+          <li>
+            <h4 class="text-center">白酒的营养功能</h4>
+            <p>
+              白酒在营养上的作用，从饮食学而言，酒精既是一种调味品或刺激剂，也是一种营养料，每克酒精在人体内燃烧，完全氧化后，能发生热量7.1千卡。例如每克淀粉可发热量4.1千卡，葡萄糖仅发3.37卡热量。过去有人认为乙醇有较强的食物特殊动力作用，它在体内代谢燃烧时，不但乙醇本身的热量散出体外，还能被人体利用，而且促进其它营养素吸收，增加代谢率，也造成散发蛋白质、脂肪、碳水化合物所产生的热量。现在试验证明：白酒的1/3热量补偿肝脏消耗的能量，2/3的能量在肝外参加蛋白质、碳水合物等营养素能量代谢，乙醇70%可供给人体热量，并被人体利用，因此，纠正了过去片面的论点。现认为乙醇可实际供给热量5千卡。 白酒在烹饪上的作用，在烹饪鱼虾鸡肉类时，常用白酒或黄酒做高味品，使菜肴香气浓郁，可减少鱼肉内三甲基胺，能去掉鱼虾的腥臭味，使鱼虾肉禽的口味更鲜美。
+            </p>
+            <p>
+              白酒在医疗保健方面有作用：夜晚服用少量的白酒，可平缓的促进血液循环，起到催眠作用。饮少量白酒可刺激胃液分泌与唾液分泌，因而起到健胃和止疼痛、利小便及驱虫的作用。中医用白酒治疗疾病或做为强肾补剂已有很久的历史。西医也经常劝告感冒的人饮些白兰地酒。也用酒外涂，作为杀菌消毒作用。 在美国波士顿妇女医院，迈克尔医生对680人进行研究，表明每天饮酒三次的人，不易患心肌梗塞。如美国1978年前，有人对30-79岁的13285名男女居民做调查，认为饮40度的酒，每次饮30-60毫升，死亡率最低。 日本对5139名医院进行了几年跟踪调查，发现每天饮100毫升60度白酒的人死亡率明显低于饮酒者或戒酒者。又如日本医学专家研究表明，少量饮酒，可促使人体产生溶解血栓的物质“尿激酶”，可能对预防心肌梗塞和脑血栓有利。日本还有人称酒为“长寿水”。在法国报告中也提到产酒地区患冠心病的人较其它地区少，因此，酒也称为“生命水”。
+            </p>
+          </li>
+          <li>
+            <h4 class="text-center">适量饮酒可防中风</h4>
+            <p>
+              酒的主要成分是酒精即乙醇，是一种对人体各种组织细胞都有损害的有毒物质，能损害大脑细胞、麻醉大脑皮质，使人智力减退，胆固醇增加，促进动脉硬化。长期嗜酒的人，交感神经兴奋，心跳加快，血压增高。过量饮酒者，由于血压突然上升，血管破裂则发生脑出血。饮酒后有的人发生血管舒缩功能障碍，面色苍白、皮肤湿冷、血压降低、脑供血不足，易发生脑梗塞。慢性酒精中毒的病人，由于动脉硬化、脑细胞损害，常过早地发生智能衰退，严重者可成为痴呆。在中风病人中，长期饮酒者，是一般老人的2～3倍。
+            </p>
+            <p>
+              但是，任何事情都是适可而止，好处和害处是相互的，请看如下报道：
+            </p>
+            <p>
+              科学研究结果表明，每天喝一两杯酒的人患局部缺血中风的可能性可降低4.5%，但那些每天喝7杯以上的人患中风的可能性将提高3倍。
+            </p>
+          </li>
+          <li>
+            <h4 class="text-center">适量饮酒可防电磁辐射</h4>
+            <p>
+              饮酒可抗辐射。长时间看电视，电视荧光屏的辐射对人体有害。如果看电视前适量饮酒，就不必担心电视的微量辐射了。
+            </p>
+            <p>
+              因为酒类含有的酒精成分，能吸收并中和射线产生的有毒成分，从而保护生物体内细胞免受伤害。所以，看电视前适量饮酒对身体健康是有好处的。但另一方面，酒后看电视对眼睛不利。有人经过研究发现，人在正常情况下，连续收看4～５个小时的电视节目，视力会暂时减退30％，尤其是观看彩电，会因大量消耗视网膜上圆柱细胞中的视紫红质，使视力衰退。
+            </p>
+            <p>
+              若长期饮酒，特别是酗酒，对眼睛是有较重损伤的，尤其是甲醇，能使视神经萎缩。酒后再看电视节目，自然会使眼睛受到更大的损伤。所以酒后看电视应注意掌握，眼睛不要正对屏幕，并且要坐在离电视机1．5米以外的地方才好。
+            </p>
+          </li>
+          <li>
+            <h4 class="text-center">白酒加热后再喝危害少</h4>
+            <p>
+              喝白酒先烫后饮对人体有益。因为白酒的主要成分是乙醇（酒精），除此还有醛，饮酒过多会引起酒精中毒。醛虽然不是白酒的主要成分，但对人体的损害要比酒精大得多。可是醛的沸点低，只有20℃左右，所以只要把酒烫热一些，可以使大部分醛挥发掉，之样对人身体的危害就会少一些。
+            </p>
+            <p>
+              古代温酒喝主要是在冬季，当时酒的度数低，相当于现在的米酒，温喝后对胃有好处，口感也很好。
+            </p>
+            <p>
+              喝冰冻的酒对身体是有害的，一般来说，冰冻的酒比身体温度会低十度左右，长期饮用会导致人胃肠道紊乱，引起食欲下降，缺乏营养，影响人的身体健康。所以建议喝的时候要加热一点。
+            </p>
+            <p>
+              白酒加热喝主要是因为加热后酒中的酒精会加速挥发，降低酒精的浓度后对人体的影响相对降低，也比较好入喉。但是近年来又发现，白酒加热后因为酒精继续在挥发中，在饮用同时酒精会直接造成对眼睛的熏蒸，反而造成对眼睛的伤害，所以，见仁见智，能少喝酒就少喝吧！
+            </p>
+          </li>
+          <li>
+            <h4 class="text-center">糖尿病人不宜随意饮酒</h4>
+            <p>
+              酒精可以抑制体内非常重要的一个化学反应———肝脏的糖原异生与糖原分解反应。这两个反应可以在人饥饿时通过体内储存的肝糖原分解为葡萄糖或通过储存的脂肪分解的脂肪酸合成葡萄糖释放入血液而保持血糖的恒定。糖尿病人如果喝了大量的烈性酒，特别在晚上空腹喝酒，酒精抑制了糖原异生反应，从而也就抑制了血糖自动调节的机制，就会产生严重的低血糖。特别是那些晚上注射中、长效胰岛素的糖尿病患者，更应该避免晚餐空腹大量饮酒。
+            </p>
+            <p>
+              糖尿病人并非绝对不能饮酒，但要了解饮酒后对人有哪些益处和害处，如何选择酒的品种，如何避免酒对人体的不利影响。酒可以扩张血管，促进血液流通，特别是红葡萄酒，内含花色素苷、丹宁、白黎芦醇、黄酮类等抗氧化剂，具有降低血脂、防止动脉硬化的作用。少量饮酒有益健康。但酒也产生大量的热能，高于糖类和蛋白质所产生的热能，长期大量饮酒就会因摄入的热能太多而肥胖。所以糖尿病人要了解各种酒的含糖量和含酒精量，尽量饮用低酒精、低含糖量的干白酒、啤酒、红葡萄酒。
+            </p>
+          </li>
+          <li>
+            <h4 class="text-center">水晶杯盛酒会慢性中毒</h4>
+            <p>
+              用水晶餐具装盛的食物、饮品，看起来华美绚丽，令人爱不释手。但很多人想像不到，它也会使人慢性中毒。
+            </p>
+            <p>
+              有关专家说，水晶制品是一种颇具威胁的铅污染源。其中的氧化铅含量往往高达20％—30％，用它来盛水，一般还不至于引起铅中毒，但若用来盛酒或酸性饮料，水晶制品中的铅就会被析出并溶于酒或酸性饮料之中。实验表明，盛酒的时间越长，酒中的含铅量就越高。另有国外的实验证明，把1升白兰地酒置于水晶器皿中，5年后，酒中的含铅量可高达2万微克/升，远远超过环保部门关于饮品中含铅量要低于50微克/升的规定。
+            </p>
+            <p>
+              世界卫生组织规定，如果一个人的血铅水平大于100微克/升就属于铅中毒。血液中的铅蓄积到一定程度后，会使人记忆力、智力下降，出现精神障碍、噩梦、失眠等问题。铅中毒对儿童的危害更大，容易引起儿童智力发育障碍。因此，要尽量避免用水晶制品长期储存酒类、果汁或酸性饮料，以免铅蓄积引起中毒，损害健康。
+            </p>
+          </li>
+          <li>
+            <h4 class="text-center">酒切忌与西药同服</h4>
+            <p>
+              中国的酒文化源远流长，甚至和我们的传统医药也有着千丝万缕的联系。不过，需要正视的是，正在服西药的人千万不要喝酒，否则美酒加上西药，只会酿出一杯对人体有害无益的“毒酒”。
+            </p>
+            <p>酒精+安定：昏迷甚至死亡</p>
+            <p>
+              “30年前睡不醒，30年后睡不着。”据统计，我国失眠症患者高达数千万，尤其是许多中年上班族和老人更是为失眠所苦，有长期服用安眠药助眠的习惯。但是，失眠症患者在饮酒后服用安定、水合氯醛等镇静安眠药物的话，是非常危险的！由于酒精和安眠药都可以产生强烈的大脑神经抑制作用，病人因此容易昏迷不醒或者中毒死亡。据说，喜剧大师卓别林就死于酒后服用安眠药。
+            </p>
+            <p>酒精+降糖药：低血糖性休克</p>
+            <p>
+              糖尿病人也要格外注意了，注射胰岛素或口服降糖药期间，空腹饮酒的话，容易出现低血糖反应。值得警惕的是，这种低血糖症状表现为心慌、出汗、疲乏无力，甚至烦躁、意识混乱、多语，常常被醉酒反应掩盖，不易与醉酒区别，以致即使发生了严重而持久的低血糖，而患者往往浑然不觉，最终发生低血糖性休克。如果不及时治疗，可能会导致脑组织不可逆的损害，甚至引起死亡。
+            </p>
+            <p>酒精+阿司匹林：胃肠道出血</p>
+            <p>
+              在我国，许多心脏病患者和关节炎患者都需要长期服用非甾体类消炎药，比如阿司匹林或者消炎痛。这类药物对胃的刺激很大，容易引起胃肠道出血，如果服药时还喝酒的话，药物引起的不良反应“如虎添翼”，可以发生消化道大出血。而平时还患有胃和十二指肠溃疡的患者，以及凝血功能障碍的人，尤其容易发生这种严重的并发症。值得一提的是，有些平素健康的人喝酒后会产生严重的头痛，如果还自作主张服用止痛药，同样容易诱发胃肠道出血。
+            </p>
+          </li>
+          <li>
+            <h4 class="text-center">酒后不宜饮茶</h4>
+            <p>
+              有人喜欢酒后饮茶，认为有利解酒，从中医阴阳学来看，酒味辛，先入肺，肺主皮毛，与大肠相表里。饮酒应取其升阳发散之性，使阳气上升，促进血液循环。茶素味苦，属阴，主降。若酒后饮茶必将酒性驱肾，肾主水，水生温，于是形成寒滞则导致小便频浊、阳痿、大便燥结等症状。李时珍在《本草纲目》中就做较详细的记载：“酒后饮茶伤肾脏，腰腿坠重，膀胱冷痛，兼患痰饮水肿”。
+            </p>
+            <p>
+              现代医学研究表明，酒中含有酒精成分，对心血管的刺激性很大，而浓茶同样具有兴奋心脏的作用。两者合而为一，双管齐下，更增加了对心脏的刺激。这对于心脏功能欠佳的人来说，其后果是可想而知的。
+            </p>
+            <p>醉酒后饮浓茶，对肾脏也是不利的。因为酒精的绝大部分，均已在肝脏中转化为乙醛之后再变成乙酸，乙酸又可分解成二氧化碳和水，经肾脏排出体外。浓茶中的茶碱，可以迅速地对肾脏发挥利尿作用。这就会促进尚未分解的乙醛过早地进入肾脏。由于乙醛对肾脏有较大的刺激性，从而对肾功能造成损害。严重者可危及生命。
+            </p>
+            <p>因此，酒后不宜饮茶，尤其是浓茶。为了解酒。可进食些柑桔、梨、苹果之类的水果，有西瓜汁更好。如无水果，冲杯果汁或糖水喝都有助于解酒。中药则可用葛花煎水代茶饮，或以葛根加绿豆熬汁喝，也可解酒。对于酒醉后出现昏睡、呼吸缓慢、脉搏细弱、皮肤湿冷等症状的人，可能有生命危险，则应尽早送医院抢救。
+            </p>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
-  <div id="moquu_wxin" class="moquu_wxin"><a href="./about.html"><div class="moquu_wxinh"></div></a></div>
-  <div id="moquu_wshare" class="moquu_wshare"><a href="javascript:void(0)"><div class="moquu_wshareh"></div></a></div>
+  <div id="moquu_wxin" class="moquu_wxin">
+    <a href="./about.html">
+      <div class="moquu_wxinh"></div>
+    </a>
+  </div>
+  <div id="moquu_wshare" class="moquu_wshare">
+    <a href="javascript:void(0)">
+      <div class="moquu_wshareh"></div>
+    </a>
+  </div>
   <div class="footer">
-      <div class="footer-bottom">
-        <div class="col-md-4 col-md-offset-4">
-          <p class="col-md-12">品驾酒有限公司</p>
-          <p class="col-md-12">版权均归 品驾酒有限公司所有</p>
-          <p class="col-md-12">Powered by Ls365 v8.0.7 ©2017-2019</p>
-        </div>
+    <div class="footer-bottom">
+      <div class="col-md-4 col-md-offset-4">
+        <p class="col-md-12">品驾酒有限公司</p>
+        <p class="col-md-12">版权均归 品驾酒有限公司所有</p>
+        <p class="col-md-12">Powered by Ls365 v8.0.7 ©2017-2019</p>
       </div>
+    </div>
   </div>
 </body>
+
 </html>
