--- a/index.html
+++ b/index.html
@@ -171,16 +171,21 @@
       <hr>
       <ul class="row">
         <li class="col-md-6">
-          <a href="" title="自考学霸练成记：自考升学不只是纯看书！">亳州作为三朝古都，自古享有"酒药之乡"的美誉，酿酒...</a> <span>11-02</span></li>
+          <a href="./culture.html" title="白酒的营养功能">白酒在营养上的作用，从饮食学而言，酒精既是一种调味...</a>
+          <span>11-02</span>
+        </li>
         <li class=" col-md-6">
-          <a href="" title="为什么老师是最幸福的职业之一？">"品驾"酒秉承古井镇千年传统的酿造工艺，纯手工酿造...</a>
-          <span>10-31</span></li>
+          <a href="./culture.html" title="适量饮酒可防中风">酒的主要成分是酒精即乙醇，是一种对人体...</a>
+          <span>10-31</span>
+        </li>
         <li class=" col-md-6">
-          <a href="" title="教育云时代下如何实现智慧化教学">公司施行产品的一体化营销策略，把产品的配送、销售...</a>
-          <span>10-30</span></li>
+          <a href="./culture.html" title="白酒加热后再喝危害少">喝白酒先烫后饮对人体有益。因为白酒的主要成分是乙醇...</a>
+          <span>10-30</span>
+        </li>
         <li class=" col-md-6">
-          <a href="" title="聚焦十九大：为新时代打call，这些事与你息息相关">为进一步开拓全国市场，提高业务的快速反应能力我公司...</a>
-          <span>10-20</span></li>
+          <a href="./culture.html" title="糖尿病人不宜随意饮酒">酒精可以抑制体内非常重要的一个化学反应———肝脏的糖原异...</a>
+          <span>10-20</span>
+        </li>
       </ul>
     </div>
     <div class="title4">
