--- a/introduction.html
+++ b/introduction.html
@@ -72,7 +72,7 @@
   <div class="container">
     <ol class="breadcrumb">
       <li><a href="./index.html">首页</a></li>
-      <li><a href="./about.html">公司简介</a></li>
+      <li><a href="./introduction.html">公司简介</a></li>
     </ol>
     <div class="intro_main">
       <div class="col-md-3">
