--- a/join.html
+++ b/join.html
@@ -22,6 +22,28 @@
     .col-md-3{
       margin: 10px 0;
     }
+    .panel-primary > .panel-heading {
+      background-color: #9c061b;
+      border-color: #9c061b;
+    }
+    .panel-primary {
+      border-color: #9c061b;
+    }
+    .join-center{
+      margin-top: 40px;
+    }
+    .list-group-item-text{
+      line-height: 30px;
+    }
+    .panel-body{
+      font-size:16px;
+    }
+    a.list-group-item, button.list-group-item{
+      color: #333;
+    }
+    .panel-footer{
+      background:#fcf8e3;
+    }
   </style>
 </head>
 <body>
@@ -39,7 +61,56 @@
     </div>
   </div>
   <div class="container">
-
+    <ol class="breadcrumb">
+      <li><a href="./index.html">首页</a></li>
+      <li><a href="./join.html">招商加盟</a></li>
+    </ol>
+    <div class="col-md-8 col-md-offset-2 join-center">
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          <div class="panel-titel">
+            <h3 class="text-center">加盟政策</h3>
+          </div>
+        </div>
+        <div class="panel-body">
+          <div class="list-group">
+            <a href="#" class="list-group-item ">
+              <p class="list-group-item-text">1、认可品驾酒业的经营理念。</p>
+            </a>
+            <a href="#" class="list-group-item">
+              <p class="list-group-item-text">2、遵守品驾酒业销售公司的市场管理制度和规则，遵循共同为了市场的发展而竭诚合作。</p>
+            </a>
+            <a href="#" class="list-group-item ">
+              <p class="list-group-item-text">3、严格按照公司产品线的指导要求，确立市场产品线；严格按照公司统一指导价格体系要求，在规定的合理范围内制订产品价格体系。</p>
+            </a>
+            <a href="#" class="list-group-item ">
+              <p class="list-group-item-text">4、具有现代市场开拓能力。</p>
+            </a>
+            <a href="#" class="list-group-item ">
+              <p class="list-group-item-text">5、拥有一定的资金实力，地（市）级代理首批提货标准30万元，县（市）级代理首批提货标准15万元。能按照市场的要求进行运作。</p>
+            </a>
+            <a href="#" class="list-group-item ">
+              <p class="list-group-item-text">6、拥有一定的社会资源，当地社会关系较好，能很好运作核心消费群。</p>
+            </a>
+            <a href="#" class="list-group-item ">
+              <p class="list-group-item-text">7、拥有执行力较强的团队，能很好地保证渠道、网点运作的需要。</p>
+            </a>
+            <a href="#" class="list-group-item ">
+              <p class="list-group-item-text">8、产品严格按指定区域销售，凡发现窜货、倒货的现象，公司将严肃处理，直至终止合作合同，以确保按规定运作经销商的长期利益。</p>
+            </a>
+            <a href="#" class="list-group-item ">
+              <p class="list-group-item-text">9、坚持合法经营，能完成公司要求的各项任务指标。</p>
+            </a>
+            <a href="#" class="list-group-item ">
+              <p class="list-group-item-text">10、有保障物流配货的能力。</p>
+            </a>
+          </div>
+          <div class="panel-footer">
+            <p>有意加盟者可联系品驾酒业总负责人孙管，请前往<a href="./about.html">联系我们</a>获取联系方式！</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <div id="moquu_wxin" class="moquu_wxin"><a href="./about.html"><div class="moquu_wxinh"></div></a></div>
   <div id="moquu_wshare" class="moquu_wshare"><a href="javascript:void(0)"><div class="moquu_wshareh"></div></a></div>
