--- a/products.html
+++ b/products.html
@@ -41,7 +41,7 @@
   <div class="container">
     <ol class="breadcrumb">
       <li><a href="./index.html">首页</a></li>
-      <li><a href="./about.html">产品中心</a></li>
+      <li><a href="./products.html">产品中心</a></li>
     </ol>
     <div class="title1">
       <div class="title-header">
